connected to mongodb database

--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -1,1 +1,5 @@
 PORT=4000
+
+DATABASE = mongodb+srv://sharmavaibhav203:<password>@cluster0.mn2swg5.mongodb.net/?retryWrites=true&w=majority
+
+PASSWORD_DATABASE = Upb8AZZ1aBYurZLT
