--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongoose": "^7.4.3"
+    "mongoose": "^7.4.3",
+    "server.js": "^1.0.0"
   }
 }
