login api created

--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -3,3 +3,7 @@ PORT=4000
 DATABASE = mongodb+srv://sharmavaibhav203:<password>@cluster0.mn2swg5.mongodb.net/?retryWrites=true&w=majority
 
 PASSWORD_DATABASE = Upb8AZZ1aBYurZLT
+
+JWT_SECRETKEY = blkihbihvvuuyvjlkjgvljhvkhgfhcckjgfc568779
+
+JWT_EXPIRE = 5d
