--- a/package.json
+++ b/package.json
@@ -19,9 +19,15 @@
   },
   "homepage": "https://github.com/VaibhavSharma1998/ecommerce-app#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.3",
-    "server.js": "^1.0.0"
+    "nodemailer": "^6.9.4",
+    "server.js": "^1.0.0",
+    "validator": "^13.11.0"
   }
 }
