--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -7,3 +7,5 @@ PASSWORD_DATABASE = Upb8AZZ1aBYurZLT
 JWT_SECRETKEY = blkihbihvvuuyvjlkjgvljhvkhgfhcckjgfc568779
 
 JWT_EXPIRE = 5d
+
+COOKIE_EXPIRE= 5
